force-app/main/default/objects/Interaction_Intent__c/Interaction_Intent__c.object-meta.xml
<CustomObject>
    <description>One or more Intents handled as part of the interaction</description>
    <label>Interaction Intent</label>
    <nameField>
        <label>Intent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interaction Intents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>