force-app/main/default/objects/Interaction_Intent__c/fields/Actor__c.field-meta.xml
<CustomField>
    <fullName>Actor__c</fullName>
    <description>Actor name who handled the intent. This is required since an interaction can be handled by multiple teammates in case of transfer or asynchronous chats.</description>
    <inlineHelpText>Actor name</inlineHelpText>
    <label>Actor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>