force-app/main/default/objects/Interaction_Intent__c/fields/Previous_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Previous_Interaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Intents associated with a previous interaction</description>
    <inlineHelpText>Intents associated with a previous interaction</inlineHelpText>
    <label>Previous Interaction</label>
    <referenceTo>Previous_Interaction__c</referenceTo>
    <relationshipLabel>Interaction Intents</relationshipLabel>
    <relationshipName>Interaction_Intents</relationshipName>
    <type>Lookup</type>
</CustomField>