force-app/main/default/objects/Interaction_Intent__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the intent</description>
    <inlineHelpText>Status of the intent</inlineHelpText>
    <label>Status</label>
    <length>64</length>
    <type>Text</type>
</CustomField>