force-app/main/default/objects/Interaction_Intent__c/fields/Time_Started__c.field-meta.xml
<CustomField>
    <fullName>Time_Started__c</fullName>
    <description>Time the intent is handled</description>
    <inlineHelpText>Time the intent is handled</inlineHelpText>
    <label>Time Started</label>
    <type>DateTime</type>
</CustomField>